Version 0.3.1
-------------

SharpBlue (09 December 2001)
-------------------------------
Modified rankings generation to select only ships that aren't
destroyed. Speeds it up by over 50% on big games.


SharpBlue (06 December 2001)
-------------------------------
Log viewer admin module added.


SharpBlue (04 December 2001)
-------------------------------
New log services. The logs are now kept in the database instead
of in a file. Each event has a define in the global_funcs file,
with an attached text string in the language files. The log.php
file parses the log data and outputs an intelligible string.

Also played with DHTML for the log interface. Works fine in IE,
NS6 and Mozilla. DHTML is simply disabled for browsers that
don't support it, outputting a simple table instead. Added a field
to the ships table so that users can explicitely disable DHTML if
they don't like it.


SharpBlue (03 December 2001)
-------------------------------
Fixed the broken screen resolution cookie code. Fonts for the
main interface are now dynamically selected, depending on the
screen resolution. Hopefully this will make the main interface
better for those with a resolution above 800x600. X resolution
is stored in a cookie called screenres.


SharpBlue (02 December 2001)
-------------------------------
Modified ports so you can buy more than 999,999 mine deflectors
in a single shot.

Fixed the IGB so that it displays right in Netscape 4


SharpBlue (01 December 2001)
-------------------------------
Anti-cheat measures:
 - Setting not to allow credit transfers to/from corporate planets
 - Setting to allow for a minimum player worth for capturing planets
 - IP ban module in the admin script

Addition of a new scheduler to the game. This makes the use of
the sysupdate.php3 file obsolete, as well as genrank.php3 and
gen_news.php. Settings can now be set in real-time, and the
actual system update interval does not affect any longer the game
speed.


SharpBlue (30 November 2001)