@@ -1,5 +1,9 @@
 Version 0.3.1
 -------------
+Nospoon (15 Decemeber 2001)
+-------------------------------
+Sector fighters will degrade if there is no planet (owned or corproate)
+to support the fighters.
 
 SharpBlue (09 December 2001)
 -------------------------------
